[package]
name = "tonic-build-protobuf"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Neil Shen <overvenus@gmail.com>"]
repository = "https://github.com/overvenus/tonic-protobuf"
description = "Codegen module of `tonic` gRPC implementation with rust-protobuf."
documentation = "https://docs.rs/tonic-build-protobuf"
categories = ["network-programming"]
homepage = "https://github.com/overvenus/tonic-protobuf"
keywords = ["tonic", "codec", "codegen", "protobuf"]

[features]
default = ["protobuf-v2"]
protobuf-v3 = ["dep:protobuf", "dep:protobuf-parse"]
protobuf-v2 = ["dep:protobuf2", "dep:protobuf-src" ]

[dependencies]
protobuf2 = { package = "protobuf", version = "2", optional = true }
protobuf-src = { version = "1.1.0", optional = true  }
protobuf = { version = "3", optional = true }
protobuf-parse = {version = "3", optional = true}
tonic-build = "0.11"
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
heck = "0.5"

[dev-dependencies]
tempfile = "3.0"

[package.metadata.docs.rs]
all-features = true
